--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
     text-align: center;
 }
 
-button{
-    width: 85px;
-    height: 35px;
-    margin: 10px;
+.main {
+    width: 180px;
+    height: 40px;
+    margin: 8px 40px;
 }
